--- a/_scss/_cardsection.scss
+++ b/_scss/_cardsection.scss
@@ -1,4 +1,5 @@
 .cardSectionFullWidthContainer {
+  height: 100%;
   padding: 20px 120px 20px;
   display: flex;
   justify-content: center;
@@ -12,6 +13,7 @@
 .cardSectionInnerContainer {
   width: 1080px;
   max-width: 100%;
+  height: 100%;
 }
 
 .cardSectionParagraph {
