--- a/_scss/_pagelayout.scss
+++ b/_scss/_pagelayout.scss
@@ -128,8 +128,10 @@
     &__landingpage {
         &__container {
             width: 100%;
+            height: 100%;
             &__inner {
                 max-height: var(--body-height);
+                height: 100%;
                 overflow-y: auto;
             }
         }
