--- a/_scss/_sidenav.scss
+++ b/_scss/_sidenav.scss
@@ -1,5 +1,5 @@
 .sidenav {
-    max-height: calc(70vh - 60px);
+    max-height: var(--body-height);
     overflow-y: auto;
     border-right: 1px solid $babyblue;
     padding-left: $container-padding;
@@ -7,7 +7,7 @@
     position: relative;
     @media (max-width: $breakpoint-md) {
         height: max-content;
-        max-height: 300px;
+        max-height: var(--viewport-height);
         padding: 0px 20px 20px 20px;
         box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.1);
         &__collapsed {
