--- a/_scss/_button.scss
+++ b/_scss/_button.scss
@@ -1,10 +1,10 @@
 // button styles, see style guide
 .btn {
     &__search {
-        background: $mediumblue;
+        background: $white;
         font-size: 0.9rem;
         padding: 8px 80px 8px 20px;
-        color: rgba(255, 255, 255, 0.7);
+        color: $text-color;
         border-radius: 6px;
         border: 0px;
         display: flex;
@@ -13,14 +13,11 @@
         gap: 16px;
         cursor: pointer;
         @media (max-width: $breakpoint-md) {
-            padding: 8px 40px 8px 40px;
+            padding: 8px 40px 8px 20px;
         }
         svg {
-            fill: $white;
+            fill: $text-color;
             width: 14px;
-        }
-        &:hover {
-            background: $blue;
         }
     }
 }
