--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -5,9 +5,9 @@
         <ul class="toc__menu">
             <li class="toc__item">
                 <div>
-                    {% if item.children %}<span class="toc__toggle toc__toggle__expanded">{% include icons/chevron.svg
+                    {% if item.children %}<span class="toc__toggle__expanded">{% include icons/chevron.svg
                         %}</span>{% endif %}
-                    {% if item.url %}<a href="{{ item.url }}">{{ item.title }}</a>{% else %}<strong>{{ item.title
+                    {% if item.url %}<a href="{{ item.url }}"{% assign this_url = item.url | split: '#' %}{% if this_url[0] == page.url %} class="toc__active"{% endif %}>{{ item.title }}</a>{% else %}<strong>{{ item.title
                         }}</strong>{% endif %}
                 </div>
                 {% if item.children %}
@@ -17,9 +17,9 @@
                     <li class="toc__item">
                         <div>
                             {% if item.children %}<span
-                                class="toc__toggle{% if item.children %}{% for item in item.children %}{% assign this_url = item.url | split: '#' %}{% if this_url[0] == page.url %} toc__toggle__expanded{% endif %}{% endfor %}{% endif %}">{%
+                                class="toc__toggle{% if item.children %}{% for item in item.children %}{% assign this_url = item.url | split: '#' %}{% if this_url[0] == page.url %} toc__toggle__expanded toc__active__toggle{% endif %}{% endfor %}{% endif %}">{%
                                 include icons/chevron.svg %}</span>{% endif %}
-                            {% if item.url %}<a href="{{ item.url }}">{{ item.title }}</a>{% else %}<strong>{{
+                            {% if item.url %}<a href="{{ item.url }}"{% assign this_url = item.url | split: '#' %}{% if this_url[0] == page.url %} class="toc__active"{% endif %}>{{ item.title }}</a>{% else %}<strong>{{
                                 item.title }}</strong>{% endif %}
                         </div>
                         {% if item.children %}
@@ -28,7 +28,7 @@
                             {% for item in item.children %}
                             <li class="toc__item">
                                 <div>
-                                    {% if item.url %}<a href="{{ item.url }}">{{ item.title }}</a>{% else %}<strong>{{
+                                    {% if item.url %}<a href="{{ item.url }}"{% assign this_url = item.url | split: '#' %}{% if this_url[0] == page.url %} class="toc__active"{% endif %}>{{ item.title }}</a>{% else %}<strong>{{
                                         item.title }}</strong>{% endif %}
                                 </div>
                                 {% if item.children %}
@@ -36,7 +36,7 @@
                                     {% for item in item.children %}
                                     <li class="toc__item">
                                         <div>
-                                            {% if item.url %}<a href="{{ item.url }}">{{ item.title }}</a>{% else
+                                            {% if item.url %}<a href="{{ item.url }}"{% assign this_url = item.url | split: '#' %}{% if this_url[0] == page.url %} class="toc__active"{% endif %}>{{ item.title }}</a>{% else
                                             %}<strong>{{ item.title }}</strong>{% endif %}
                                         </div>
                                     </li>
