fix: sidenav behavior

--- a/_includes/search-container.html
+++ b/_includes/search-container.html
@@ -2,7 +2,7 @@
   <div id="algolia-search" class="navigation__search">
   </div>
   <div class="search-panel pagelayout pagelayout__centerdocs" id="search_container">
-    <div class="sidenav">
+    <div class="search-sidenav">
       <div id="refinementlist"></div>
     </div>
 
