--- a/_scss/_algolia.scss
+++ b/_scss/_algolia.scss
@@ -197,9 +197,12 @@
     display: none;
 }
 
-.sidenav {
+.search-sidenav {
+    padding: 0px 20px 20px 20px;
+    box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.1);
     @media (max-width: $breakpoint-md) {
-        grid-area: sidebar;
+        padding: 20px;
+        box-shadow: none;
     }
 }
 .search-panel__results {
