--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -11,16 +11,15 @@
                         }}</strong>{% endif %}
                 </div>
                 {% if item.children %}
-                {% assign sortedItemChildren = item.children | sort: 'title' %}
                 <ul class="toc__submenu toc__accordion toc__accordion__expanded">
-                    {% for item in sortedItemChildren %}
+                    {% for item in item.children %}
                     <li class="toc__item">
                         <div>
                             {% if item.children %}<span class="toc__toggle{% if item.children %}{% for item in item.children %}{% assign this_url = item.url | split: '#' %}{% if this_url[0] == page.url %} toc__toggle__expanded toc__active__toggle{% endif %}{% endfor %}{% endif %}">{% include icons/chevron.svg %}</span>{% endif %}
                             {% if item.url %}<a href="{{ item.url }}" {% assign this_url=item.url | split: '#' %}{% if
                                 this_url[0]==page.url %} class="toc__active" {% endif %}>{{ item.title }}</a>{% else
-                            %}<strong>{{
-                                item.title }}</strong>{% endif %}
+                            %}{{
+                                item.title }}{% endif %}
                         </div>
                         {% if item.children %}
                         <ul class="toc__submenu toc__accordion{% if item.children %}{% for item in item.children %}{% assign this_url = item.url | split: '#' %}{% if this_url[0] == page.url %} toc__accordion__expanded{% endif %}{% endfor %}{% endif %}">
