--- a/_scss/_cardsection.scss
+++ b/_scss/_cardsection.scss
@@ -44,9 +44,8 @@
 }
 
 .cardSectionH2 {
-  font-family: Financierdisplay, sans-serif;
+  font-family: Helvetica, sans-serif;
   font-size: 24px;
-  font-weight: 400;
   line-height: 1.2em;
 }
 
