--- a/_scss/_footer.scss
+++ b/_scss/_footer.scss
@@ -1,3 +1,9 @@
 .footer {
   height: var(--footer-height);
+  padding-left: 1rem;
+  padding-right: 1rem;
+  text-align: center;
+  padding-top: 0.5rem;
+  padding-bottom: 0;
+  box-sizing: border-box;
 }
