--- a/_scss/_cardsection.scss
+++ b/_scss/_cardsection.scss
@@ -53,6 +53,10 @@
   padding-top: 5px;
 }
 
+.bottomPaddingSm {
+  padding-bottom: 5px;
+}
+
 .cardWrapper {
   padding-top: 20px;
   display: flex;
