make copyright notice into the link

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -30,7 +30,7 @@
             {% endfor %}
         </div>
         <div class="navigation__alt">
-            <a class="navigation__menu__item" href="https://www.canvasmedical.com/" target="_blank">Canvas Medical Website</a>
+            <a class="navigation__menu__item" href="https://www.canvasmedical.com/" target="_blank">&copy; 2023 Canvas Medical</a>
         </div>
     </div>
 </nav>
