--- a/_scss/_rogue.scss
+++ b/_scss/_rogue.scss
@@ -74,7 +74,7 @@ $font-family-monospace: 'Ubuntu Mono', 'SFMono-Regular', 'Menlo', 'Monaco', 'Con
         padding: 1rem 1.5rem;
         margin: 0;
         overflow: auto;
-        line-height: 1.4rem;
+        line-height: 1.3rem;
         position: relative;
     }
 
@@ -83,10 +83,14 @@ $font-family-monospace: 'Ubuntu Mono', 'SFMono-Regular', 'Menlo', 'Monaco', 'Con
         position: relative;
     }
 
+    code {
+      font-size: 0.9rem;
+    }
+
     p code.highlighter-rouge,
     p kbd {
         color: #cc6666;
-        font-size: 1rem;
+        font-size: 0.9rem;
         background-color: lighten($tea, 5%);
         padding: 2px 4px;
         border-radius: 2px;
