--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -1,8 +1,7 @@
-<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-88ZT44FQJN"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments)};
+  function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
-  gtag('config', '{{ site.google_analytics }}');
+  gtag('config', 'G-88ZT44FQJN');
 </script>
