--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,6 @@
 
 {% seo %}
 
-{% if ((jekyll.environment == 'production' or jekyll.environment == 'pwa') and site.google_analytics) %}
+{% if (jekyll.environment == 'production' or jekyll.environment == 'pwa') %}
 {% include google-analytics.html %}
 {% endif %}
