feat(wip): fix rogue toolbar

--- a/_includes/blocks/block-apidoc.html
+++ b/_includes/blocks/block-apidoc.html
@@ -63,7 +63,7 @@
                     exampleCode.id = '';
                     codeSource.classList.add('apidoc__hidden');
                     const randomId = document.querySelector('#payload-{{ randomId }}');
-                    randomId.appendChild(exampleCode);
+                    randomId.appendChild(exampleCode).addEventListener('click', () => { console.log('working') });
                 });
             </script>
             {% endif %}
@@ -115,7 +115,7 @@
                     exampleCode.id = '';
                     codeSource.classList.add('apidoc__hidden');
                     const randomId = document.querySelector('#request-{{ randomId }}');
-                    randomId.appendChild(exampleCode);
+                    randomId.appendChild(exampleCode).addEventListener('click', () => { console.log('working') });
                 });
             </script>
             {% endif %}
@@ -144,7 +144,7 @@
                     exampleCode.id = '';
                     codeSource.classList.add('apidoc__hidden');
                     const randomId = document.querySelector('#response-{{ randomId }}');
-                    randomId.appendChild(exampleCode);
+                    randomId.appendChild(exampleCode).addEventListener('click', () => { console.log('working') });
                 });
             </script>
             {% endif %}
@@ -184,7 +184,7 @@
                     exampleCode.id = '';
                     codeSource.classList.add('apidoc__hidden');
                     const randomId = document.querySelector('#request-{{ randomId }}');
-                    randomId.appendChild(exampleCode);
+                    randomId.appendChild(exampleCode).addEventListener('click', () => { console.log('working') });
                 });
             </script>
             {% endif %}
@@ -213,7 +213,7 @@
                     exampleCode.id = '';
                     codeSource.classList.add('apidoc__hidden');
                     const randomId = document.querySelector('#response-{{ randomId }}');
-                    randomId.appendChild(exampleCode);
+                    randomId.appendChild(exampleCode).addEventListener('click', () => { console.log('working') });
                 });
             </script>
             {% endif %}
@@ -240,7 +240,7 @@
                     exampleCode.id = '';
                     codeSource.classList.add('apidoc__hidden');
                     const randomId = document.querySelector('#request-{{ randomId }}');
-                    randomId.appendChild(exampleCode);
+                    randomId.appendChild(exampleCode).addEventListener('click', () => { console.log('working') });
                 });
             </script>
             {% endif %}
@@ -269,7 +269,7 @@
                     exampleCode.id = '';
                     codeSource.classList.add('apidoc__hidden');
                     const randomId = document.querySelector('#response-{{ randomId }}');
-                    randomId.appendChild(exampleCode);
+                    randomId.appendChild(exampleCode).addEventListener('click', () => { console.log('working') });
                 });
             </script>
             {% endif %}
@@ -296,7 +296,7 @@
                     exampleCode.id = '';
                     codeSource.classList.add('apidoc__hidden');
                     const randomId = document.querySelector('#request-{{ randomId }}');
-                    randomId.appendChild(exampleCode);
+                    randomId.appendChild(exampleCode).addEventListener('click', () => { console.log('working') });
                 });
             </script>
             {% endif %}
@@ -325,7 +325,7 @@
                     exampleCode.id = '';
                     codeSource.classList.add('apidoc__hidden');
                     const randomId = document.querySelector('#response-{{ randomId }}');
-                    randomId.appendChild(exampleCode);
+                    randomId.appendChild(exampleCode).addEventListener('click', () => { console.log('working') });
                 });
             </script>
             {% endif %}
