fix: move rogue toolbar js

--- a/_includes/blocks/block-apidoc.html
+++ b/_includes/blocks/block-apidoc.html
@@ -1,3 +1,6 @@
+<script>
+    // may need to move some of the rogue toolbar js to here
+</script>
 <div class="apidoc">
     <div class="apidoc__gridrow">
         <div class="apidoc__gridcol">
