make create and update return responses more descriptive

--- a/_includes/blocks/block-apidoc-responses-created.html
+++ b/_includes/blocks/block-apidoc-responses-created.html
@@ -4,7 +4,9 @@
     201 Created
   </div>
   <div class="apidoc__object__description">
-    The server has successfully processed the request, the new resource has been created and is now ready for interaction.
+    The server has successfully processed the request; the new resource has been created and is now ready for interaction.<br><br>
+
+    Canvas returns the created resource's id as a UUID within the <code>location</code> header and a <code>null</code> response body.
   </div>
 </div>
 {% endif %}
