--- a/_layouts/releasenotes-index.html
+++ b/_layouts/releasenotes-index.html
@@ -7,30 +7,37 @@ layout: default
       {% include filtertag.html collection=site.release-notes %}
       {% include filterdate.html collection=site.release-notes %}
     </div>
+
     <div class="pagelayout__index__items">
       <div class="pagelayout__index__header">
-        {{ content}}
+        {{ content }}
       </div>
+
       {% assign posts = site.release-notes | sort: post.date | reverse %}
+
       {% for item in posts %}
       <article class="pagelayout__index__item filtertag__item filterdate__item" data-date={{ item.date | date: '%Y-%m' | slugify }} data-tag="{% for tag in item.tags %}{{tag | slugify }}{% unless forloop.last %}, {% endunless %}{% endfor %}">
         <div class="pagelayout__index__title" itemprop="name headline">{{ item.title | escape }}</div>
+
         <p class="pagelayout__index__meta">
           <time datetime="{{ item.date | date_to_xmlschema }}" itemprop="datePublished">
             {% assign date_format = site.minima.date_format | default: "%-d %b %Y" %}
             Last updated: {{ item.date | date: date_format }}
           </time>
+
           {% if item.author %}
           by <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ item.author
               }}</span></span>
           {% endif %}
         </p>
+
         <p class="pagelayout__index__excerpt">
-          {{ content | strip_html }}
+          {{ item.content }}
         </p>
-        <a class="pagelayout__index__link" href="{{ item.url }}">
-          Read more
-        </a>
+
+        <p class="pagelayout__index__tags">
+          <strong>Tags:</strong> {{ item.tags }}
+        </p>
       </article>
       {% endfor %}
     </div>
