--- a/_layouts/releasenotes-index.html
+++ b/_layouts/releasenotes-index.html
@@ -13,7 +13,8 @@ layout: default
         {{ content }}
       </div>
 
-      {% assign posts = site.release-notes | sort: post.date | reverse %}
+      {% assign posts = site.release-notes | where_exp: "post", "post.hidden != true" | sort: "date" | reverse %}
+
 
       {% for item in posts %}
       <article class="pagelayout__index__item filtertag__item filterdate__item" data-date={{ item.date | date: '%Y-%m' | slugify }} data-tag="{% for tag in item.tags %}{{tag | slugify }}{% unless forloop.last %}, {% endunless %}{% endfor %}">
@@ -22,7 +23,7 @@ layout: default
         <p class="pagelayout__index__meta">
           <time datetime="{{ item.date | date_to_xmlschema }}" itemprop="datePublished">
             {% assign date_format = site.minima.date_format | default: "%-d %b %Y" %}
-            Last updated: {{ item.date | date: date_format }}
+            {{ item.date | date: date_format }}
           </time>
 
           {% if item.author %}
@@ -35,9 +36,21 @@ layout: default
           {{ item.content }}
         </p>
 
-        <p class="pagelayout__index__tags">
-          <strong>Tags:</strong> {{ item.tags }}
-        </p>
+<p class="pagelayout__index__tags">
+  {% for tag in item.tags %}
+    {% if tag == "ui" %}
+      <span class="tag-ui">{{ tag }}</span>
+    {% elsif tag == "bugfix" %}
+      <span class="tag-bugfix">{{ tag }}</span>
+    {% elsif tag == "api" %}
+      <span class="tag-api">{{ tag }}</span>
+    {% elsif tag == "sdk" %}
+      <span class="tag-sdk">{{ tag }}</span>
+    {% else %}
+      <span class="tag-default">{{ tag }}</span>
+    {% endif %}
+  {% endfor %}
+</p>
       </article>
       {% endfor %}
     </div>
