hide push charges release notes

--- a/_layouts/releasenotes-index.html
+++ b/_layouts/releasenotes-index.html
@@ -46,6 +46,8 @@ layout: default
       <span class="tag-api">{{ tag }}</span>
     {% elsif tag == "sdk" %}
       <span class="tag-sdk">{{ tag }}</span>
+    {% elsif tag == "config" %}
+    <span class="tag-config">{{ tag }}</span>
     {% else %}
       <span class="tag-default">{{ tag }}</span>
     {% endif %}
