--- a/_scss/_tags.scss
+++ b/_scss/_tags.scss
@@ -31,3 +31,10 @@
   padding: 3px 9px; /* Adjust padding to create space around the text */
   font-size: 0.8em; 
 }
+
+.tag-config {
+  background-color: #f2e5b8; 
+  color: #4d3c05; 
+  padding: 3px 9px; /* Adjust padding to create space around the text */
+  font-size: 0.8em; 
+}
