--- a/_scss/_filterdate.scss
+++ b/_scss/_filterdate.scss
@@ -1,8 +1,10 @@
 .filterdate {
   &__link {
     cursor: pointer;
+    color: $link-color;
+    display: block;
     &__active {
-      font-weight: 700;
+      color: $active-color;
     }
   }
   &__item {
