--- a/_scss/_tags.scss
+++ b/_scss/_tags.scss
@@ -36,5 +36,12 @@
   background-color: #f2e5b8; 
   color: #4d3c05; 
   padding: 3px 9px; /* Adjust padding to create space around the text */
-  font-size: 0.8em; 
+  font-size: 0.8em;   
+}
+
+.tag-onc {
+  background-color: #0568ad; 
+  color: #FFFFFF; 
+  padding: 3px 9px; /* Adjust padding to create space around the text */
+  font-size: 0.8em;   
 }
