--- a/_layouts/releasenotes-index.html
+++ b/_layouts/releasenotes-index.html
@@ -41,6 +41,8 @@ layout: default
                 <span class="tag-ui">{{ tag }}</span>
               {% elsif tag == "bugfix" %}
                 <span class="tag-bugfix">{{ tag }}</span>
+              {% elsif tag == "beta" %}
+                <span class="tag-beta">{{ tag }}</span>
               {% elsif tag == "onc" %}
                 <span class="tag-onc">{{ tag }}</span>
               {% elsif tag == "api" %}
