--- a/_scss/_tags.scss
+++ b/_scss/_tags.scss
@@ -45,3 +45,10 @@
   padding: 3px 9px; /* Adjust padding to create space around the text */
   font-size: 0.8em;   
 }
+
+.tag-beta {
+  background-color: #60516e; 
+  color: #FFFFFF; 
+  padding: 3px 9px; /* Adjust padding to create space around the text */
+  font-size: 0.8em;   
+}
