--- a/_includes/filterdate.html
+++ b/_includes/filterdate.html
@@ -2,8 +2,9 @@
   <h5>{{ site.data.globals.panels.filterdate }}</h5>
   {% assign postsByYearMonth = include.collection | group_by_exp:"post", "post.date | date: '%B %Y'" %}
   <div class="filterdate__links">
-    {% for yearMonth in postsByYearMonth %}
-    <div class="filterdate__link" filter-date="{{ yearMonth.name | date: '%Y-%m' }}">{{ yearMonth.name }}</div>
+    {% assign sortedPostsByYearMonth = postsByYearMonth | sort: 'name' | reverse %}
+    {% for yearMonth in sortedPostsByYearMonth %}
+      <div class="filterdate__link" filter-date="{{ yearMonth.name | date: '%Y-%m' }}">{{ yearMonth.name }}</div>
     {% endfor %}
   </div>
 </div>
